--- a/src/styles/Friendes.module.css
+++ b/src/styles/Friendes.module.css
@@ -14,13 +14,14 @@
     z-index: 1000;
   }
   
-  .modal-content {
+  .modalcontent {
     background: white;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
     max-width: 500px;
     text-align: center;
+    border: 2px solid black;
   }
   
   .close {
