--- a/src/styles/Varibles.css
+++ b/src/styles/Varibles.css
@@ -4,4 +4,12 @@
   --color-secondary: #fff;
   --color-dark: #fff;
   --color-bg: #fff;
+  --bgcolor-nav: #5a189a;
+}
+
+:root {
+  --main-font-family: "Arial", sans-serif;
+  --main-font-size: 16px;
+  --main-font-weight: normal;
+  --main-line-height: 1.5;
 }
