--- a/src/styles/Habits.module.css
+++ b/src/styles/Habits.module.css
@@ -26,7 +26,8 @@ label {
 }
 
 .habit {
-    border: 1px solid rgb(163, 163, 163);
-    padding: 10rem;
-    color: red;
+    padding: 2rem;
+    color: rgb(255, 0, 38);
+    flex-direction: row;
+
 }
