--- a/src/styles/Habits.module.css
+++ b/src/styles/Habits.module.css
@@ -32,8 +32,7 @@ label {
     flex-direction: row;
     border-radius: 7px;
     border: 1px solid rgba(255, 255, 255, 0.437);
-    background: #ededed;
-    box-shadow:  9px 9px 13px #e8e8e8,
-                 -9px -9px 13px #f2f2f2e9;
+    background: #fff;
+    box-shadow: 0px 10px 19px -3px rgba(0,0,0,0.1);
 }
 
