--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -148,18 +148,26 @@ li {
   outline: none;
   border: 2px solid rgb(87, 65, 216);
 }
+.mobileHome {
+  display: none;
+}
+
+.mobileLoginButton {
+  display: none;
+}
+.mobileSignupButton {
+  display: none;
+}
 
 @media (max-width: 768px) {
-  .logo,
-  .mobileMenuIcon {
-    margin: 0 auto;
-  }
-
   .navbar {
     height: 10vh;
     background-color: rgb(87, 65, 216);
     line-height: 15vh;
     width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
   }
 
   .nav-links {
@@ -173,25 +181,52 @@ li {
     display: none;
   }
 
+  .mobileLoginButton {
+    justify-content: center;
+    align-items: center;
+  }
+  .mobileSignupButton {
+    justify-content: center;
+    align-items: center;
+  }
+
   .nav-links-mobile {
     position: absolute;
     display: block;
     list-style: none;
     left: 0;
     top: 10%;
-    transition: all 1.5s ease-in-out;
+    transition: left 0.5s ease-in; /* Adjusted timing function */
     width: 100%;
-    color: rgba(88, 65, 216, 0.935);
-    background-color: white;
-    border-radius: 15px;
+    height: 100%;
+    color: white;
+    background-color: rgba(88, 65, 216, 0.935);
+  }
+
+  .nav-links-mobile.show {
+    left: 0;
   }
 
   .nav-links-mobile li a {
+    background-color: white;
     color: rgba(88, 65, 216, 0.935);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: poppins;
+    font-size: 20px;
+    border: 2px solid rgba(88, 65, 216, 0.935);
+    border-radius: 10px;
+    padding: 5px;
+    margin: 5px 20px;
+  }
+
+  .link {
+    margin: 5px 20px;
   }
 
   .logo {
-    font-size: 35px;
+    font-size: 30px;
     font-weight: bold;
   }
 
