imported variables into all styles modules

--- a/src/styles/Varibles.css
+++ b/src/styles/Varibles.css
@@ -1,3 +1,5 @@
+
+
 :root {
   --color-text: #fff;
   --color-primary: #fff;
@@ -5,6 +7,7 @@
   --color-dark: #fff;
   --color-bg: #fff;
   --bgcolor-nav: #5a189a;
+  --button-color: #5841d8;
 }
 
 :root {
