--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body {
     font-family: "Celias-Light", sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: #fafaff;
 }
