--- a/src/styles/Habits.module.css
+++ b/src/styles/Habits.module.css
@@ -1,3 +1,5 @@
+@import './Varibles.css';
+
 .habitsWrapper {
     display: flex;
     flex-direction: column;
@@ -6,7 +8,7 @@
 
 
 
-.habitsText{
+.habitsText {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -49,6 +51,25 @@ label {
     border-radius: 7px;
     border: 1px solid rgba(255, 255, 255, 0.437);
     background: #fff;
-    box-shadow: 0px 10px 19px -3px rgba(0,0,0,0.1);
+    box-shadow: 0px 10px 19px -3px rgba(0, 0, 0, 0.1);
 }
 
+button {
+    font-size: 12px;
+    padding: 0.5em 2em;
+    border: transparent;
+    box-shadow: 2px 2px 4px rgba(39, 39, 39, 0.4);
+    background: var(--button-color);
+    color: white;
+    border-radius: 10px;
+    margin: 1rem;
+}
+
+button:hover {
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(30, 144, 255, 1) 0%, rgba(0, 212, 255, 1) 100%);
+}
+
+button:active {
+    transform: translate(0em, 0.2em);
+}
