--- a/src/styles/Varibles.css
+++ b/src/styles/Varibles.css
@@ -2,7 +2,7 @@
 
 :root {
   --color-text: #fff;
-  --color-primary: #fff;
+  --color-primary: #5841d8;
   --color-secondary: #fff;
   --color-dark: #fff;
   --color-bg: #fff;
