--- a/src/styles/NewTasks.module.css
+++ b/src/styles/NewTasks.module.css
@@ -18,16 +18,16 @@
   align-items: center;
   /* background-color: antiquewhite; */
 
-  width: 100;
-  height: 100px;
-  margin: 0px;
+  width: 100%;
+  height: 100%;
+  margin: 0%;
 }
 
 .labelNewTask {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px;
+  margin: 2rem;
 }
 
 .btnContainer {
@@ -36,8 +36,6 @@
   align-items: center;
   padding: 20px;
   gap: 1rem;
-
-  /* background-color: red; */
 }
 
 .addedTaskContainer {
@@ -50,10 +48,6 @@
   justify-content: center;
   align-items: center;
   margin: 20px;
-}
-
-.testTwo {
-  background-color: #e9ecef;
 }
 
 .newTaskContainer {
