--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -17,3 +17,37 @@ button:hover {
 button:active {
     transform: translate(0em, 0.2em);
 }
+
+.buttonLowKey {
+    font-size: 12px;
+    padding: 0.5em 2em;
+    border: transparent;
+    box-shadow: 2px 2px 4px rgba(39, 39, 39, 0.597);
+    background: #fafaff;
+    color: var(--button-color);
+    border-radius: 50px;
+    margin: 1rem;
+    box-shadow: 2px 2px 4px rgba(212, 212, 212, 0.844);
+    border: 1px solid #ededed;
+}
+
+.buttonLowKey:hover {
+    background: rgb(2, 0, 36);
+    background-image: linear-gradient(20deg,
+            hsl(240deg 100% 99%) 0%,
+            hsl(240deg 100% 99%) 11%,
+            hsl(240deg 100% 99%) 22%,
+            hsl(240deg 100% 99%) 33%,
+            hsl(240deg 100% 99%) 44%,
+            hsl(240deg 100% 100%) 56%,
+            hsl(240deg 100% 100%) 67%,
+            hsl(240deg 100% 100%) 78%,
+            hsl(240deg 100% 100%) 89%,
+            hsl(0deg 0% 100%) 100%);
+    box-shadow: 2px 2px 4px rgba(212, 212, 212, 0.844);
+    border: 1px solid rgb(237, 237, 237)ddd;
+}
+
+.buttonLowKey:active {
+    transform: translate(0em, 0.2em);
+}
