--- a/src/styles/Habits.module.css
+++ b/src/styles/Habits.module.css
@@ -54,6 +54,14 @@ label {
     box-shadow: 0px 10px 19px -3px rgba(0, 0, 0, 0.1);
 }
 
+.addDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    margin-bottom: 5rem;
+}
+
 button {
     font-size: 12px;
     padding: 0.5em 2em;
@@ -81,7 +89,11 @@ button:active {
     text-shadow: black;
 }
 
-.habitH2{
+.habitH2 {
     font-family: "Celias-Bold";
     color: #5841d8;
+}
+
+.addBtn {
+    font-size: 16px;
 }
