--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,16 +1,33 @@
 @import './Varibles.css';
 
+.container {
+  max-width: 1170px;
+  margin: auto;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+ul {
+  list-style: none;
+}
+
 .footer {
   background-color: whitesmoke;
   padding: 30px 0;
+  height: 200px;
+  bottom: 0;
 }
 
-.footer-col {
+.footerCol {
   width: 25%;
   padding: 0 15px;
 }
 
-.footer-col h4 {
+.footerCol h4 {
   font-size: 18px;
   color: #ffffff;
   text-transform: capitalize;
