--- a/src/styles/Habits.module.css
+++ b/src/styles/Habits.module.css
@@ -4,6 +4,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url(../pics/undraw_team_up_re_84ok.svg);
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
 
@@ -21,22 +24,15 @@
     display: flex;
     gap: 2rem;
     padding: 1rem;
-    /* border: 1px solid rgb(209, 91, 91); */
 }
-
-/* .filterText{
-    display: flex;
-    align-self: flex-start;
-    margin-left: 20%;
-} */
 
 .habitsContainer {
     display: flex;
     flex-direction: column;
     gap: 2rem;
     padding: 3rem;
-    min-width: 60%;
-    max-width: 90%;
+    min-width: 50%;
+    max-width: 70%;
 }
 
 label {
