--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,23 @@
 body {
-    background-color: #fafaff;
+  background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
 }
 
 * {
-    font-family: "Celias-Light", sans-serif;
-}
-
-
-body {
-    background-color: #fafaff;
+  font-family: "Celias-Light", sans-serif;
 }
 
 @font-face {
-    font-family: "Celias-Light";
-    src: url("./styles/font/Celias-Light.eot");
-    src: url("./styles/font/Celias-Light.woff") format("woff"),
-        url("./styles/font/Celias-Light.ttf") format("truetype"),
-        url("./styles/font/Celias-Light.woff2") format("woff2");
+  font-family: "Celias-Light";
+  src: url("./styles/font/Celias-Light.eot");
+  src: url("./styles/font/Celias-Light.woff") format("woff"),
+    url("./styles/font/Celias-Light.ttf") format("truetype"),
+    url("./styles/font/Celias-Light.woff2") format("woff2");
 }
 
 @font-face {
-    font-family: "Celias-Bold";
-    src: url("./styles/font/Celias-Bold.eot");
-    src: url("./styles/font/Celias-Bold.woff") format("woff"),
-        url("./styles/font/Celias-Bold.ttf") format("truetype"),
-        url("./styles/font/Celias-Bold.woff2") format("woff2");
+  font-family: "Celias-Bold";
+  src: url("./styles/font/Celias-Bold.eot");
+  src: url("./styles/font/Celias-Bold.woff") format("woff"),
+    url("./styles/font/Celias-Bold.ttf") format("truetype"),
+    url("./styles/font/Celias-Bold.woff2") format("woff2");
 }
