--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
-@import './Varibles.css';
+@import "./Varibles.css";
 
 * {
   padding: 0;
@@ -62,8 +62,7 @@ li {
 
 .mobileMenuIcon {
   border: none;
-  background: none;
-  font-size: 20px;
+  font-size: 2px;
 }
 
 .mobileMenuIcon {
