--- a/src/styles/NewTasks.module.css
+++ b/src/styles/NewTasks.module.css
@@ -1,5 +1,11 @@
 @import "./Varibles.css";
 
+.tasksWrapper {
+  background-image: url(../pics/completed-task-two-color.svg);
+  background-repeat: no-repeat;
+  background-position: left 35rem bottom 1px;
+}
+
 * {
   font-family: "Poppins", sans-serif;
   padding: 0;
@@ -20,7 +26,12 @@
   align-items: center;
   max-width: 60%;
   margin: 3.5rem;
-  height: 200px;
+  height: 10.5rem;
+}
+
+.taskTypeSelect,
+.dueDateSelect {
+  font-size: 1.2rem;
 }
 
 .newTaskH1 {
@@ -28,7 +39,7 @@
   font-size: 4rem;
   font-family: "Celias-Bold";
   text-shadow: black;
-  padding-bottom: 2px;
+  padding-bottom: 1rem;
 }
 
 .labelContainer {
@@ -52,7 +63,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 1rem;
   gap: 1rem;
 }
 
@@ -61,9 +72,9 @@
   color: #8707ff;
   border: 2px solid #8707ff;
   border-radius: 50px;
-  padding: 10px 25px;
+  padding: 0.625rem 1.5625rem;
   background: transparent;
-  max-width: 190px;
+  max-width: 11.875rem;
 }
 
 .inputTitle:active {
@@ -79,7 +90,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px;
+  margin: 1rem;
 }
 
 .newTaskContainer {
@@ -108,11 +119,4 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.svgImage {
-  width: 300px;
-  height: 300px;
-  position: absolute;
-  z-index: -1;
 }
