--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -16,10 +16,11 @@ ul {
 }
 
 .footer {
-  background-color: whitesmoke;
+  background-color: #5841d8;
   padding: 30px 0;
-  height: 200px;
+  height: 170px;
   bottom: 0;
+  width: 100%;
 }
 
 .footerCol {
@@ -27,22 +28,22 @@ ul {
   padding: 0 15px;
 }
 
-.footerCol h4 {
-  font-size: 18px;
+.footerCol h3 {
   color: #ffffff;
-  text-transform: capitalize;
-  margin-bottom: 20px;
+  font-size: 1.5rem;
 }
 
 .footer a {
   text-decoration: none;
-  color: black;
+  color: rgb(255, 255, 255);
   margin: 10px 0;
 }
+
 .footer-col h3,
 .footer-col ul {
   padding-left: 50px;
 }
+
 .footer-col h3 {
   padding-left: 15px;
 }
@@ -50,9 +51,9 @@ ul {
 .footer a:hover {
   color: #f47820;
   font-weight: 100;
-  font-size: 2rem;
+  font-size: 1.2rem;
 }
 
-.footer h3:hover {
-  color: #f47820;
-}
+/* .footer h3:hover {
+  color: #392a91;
+} */
