--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -58,6 +58,7 @@ width: 100%;
   width: 100px;
   height: auto;
   margin-left: 20px;
+  margin-top: 15px;
 }
 
 .listImageWrapper {
@@ -77,7 +78,6 @@ width: 100%;
   flex-direction: row;
   align-items: center; 
   gap: 20px; 
-  padding-left: ;
 }
 
 .textAndImage p {
@@ -90,3 +90,6 @@ width: 100%;
   height: 400px; 
 }
 
+.gridItem3 img{
+  width: 200px;
+}
