--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -24,7 +24,9 @@
   grid-template-rows: repeat(1, 1fr);
 }
 
-.gridItem1, .gridItem2, .gridItem3 {
+.gridItem1,
+.gridItem2,
+.gridItem3 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,22 +35,28 @@
   border-radius: 7px;
   border: 1px solid rgba(255, 255, 255, 0.437);
   background: #fff;
-  box-shadow: 0px 10px 19px -3px rgba(0,0,0,0.1);
+  box-shadow: 0px 10px 19px -3px rgba(0, 0, 0, 0.1);
   margin: 50px;
 }
 
-.gridItem1 ul, .gridItem2 ul, .gridItem3 ul {
-display: flex;
-flex-direction: column;
-width: 100%;
+.gridItem1 ul,
+.gridItem2 ul,
+.gridItem3 ul {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
-.gridItem1 li, .gridItem2 li, .gridItem3 li {
+.gridItem1 li,
+.gridItem2 li,
+.gridItem3 li {
   display: flex;
   justify-content: center;
 }
 
-.gridItem1 img, .gridItem2 img, .gridItem3 img {
+.gridItem1 img,
+.gridItem2 img,
+.gridItem3 img {
   width: 100px;
   height: auto;
   margin-left: 20px;
@@ -64,21 +72,21 @@ width: 100%;
 .textAndImage {
   display: flex;
   flex-direction: row;
-  align-items: center; 
-  gap: 20px; 
-  
+  align-items: center;
+  gap: 20px;
+
 }
 
 .textAndImage p {
-  flex: 1; 
+  flex: 1;
   margin-right: 20px;
 }
 
 .textAndImage img {
-  width: auto; 
-  height: 400px; 
+  width: auto;
+  height: 400px;
 }
 
-.gridItem3 img{
-  width: 200px; 
+.gridItem3 img {
+  width: 200px;
 }
