--- a/src/styles/Friendes.module.css
+++ b/src/styles/Friendes.module.css
@@ -1,90 +1,95 @@
-@import './Varibles.css';
+@import "./Varibles.css";
 
+.friendsWrapper {
+  background-image: url(../pics/manager-monochromatic.svg);
+  background-repeat: no-repeat;
+  background-position: top right;
+  background-position-y: 10px;
+  background-size: 50%;
+}
 
 .modal {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1000;
-  }
-  
-  .modalcontent {
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-    max-width: 500px;
-    text-align: center;
-    border: 2px solid black;
-  }
-  
-  .close {
-    float: right;
-    font-size: 1.5em;
-    cursor: pointer;
-  }
-  
-  .modal img {
-    max-width: 100%;
-    height: auto;
-  }
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
 
-  .gridContainer {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-gap: 10px;
-  }
+.modalcontent {
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  max-width: 500px;
+  text-align: center;
+  border: 2px solid black;
+}
 
-  .girdItem1{
-    grid-column: 2;
-    grid-row: 1;
-    border-radius: 7px;
-    border: 1px solid rgba(255, 255, 255, 0.437);
-    background: #fff;
-    box-shadow: 0px 10px 19px -3px rgba(0,0,0,0.1);
-    margin: 20px;
-    margin-top: 100px;
-    border-radius: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
+.close {
+  float: right;
+  font-size: 1.5em;
+  cursor: pointer;
+}
 
-  .girdItem2 {
-    grid-column: 1;
-    grid-row: 1;
-    display: flex;
-    justify-content: end;
-    margin-top: 50px;
-  }
+.modal img {
+  max-width: 100%;
+  height: auto;
+}
 
-  .girdItem3 {
-    grid-column: 3;
-    grid-row: 1;
-    margin-top: 50px;
-    
-  }
+.gridContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 10px;
+}
 
-  .removeBtn {
-    display: flex;
-    justify-content: end;
-  }
+.girdItem1 {
+  grid-column: 2;
+  grid-row: 1;
+  border-radius: 7px;
+  border: 1px solid rgba(255, 255, 255, 0.437);
+  background: #fff;
+  box-shadow: 0px 10px 19px -3px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+  margin-top: 100px;
+  border-radius: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 
-  .addFriends {
-    padding: 20px;
-  }
+.girdItem2 {
+  grid-column: 1;
+  grid-row: 1;
+  display: flex;
+  justify-content: end;
+  margin-top: 50px;
+}
 
-  .iconImg {
-    border-radius: 50%; 
-    width: 40px; 
-    height: 40px; 
-    object-fit: cover;
-    border: 1px solid black;
-  }
-  
+.girdItem3 {
+  grid-column: 3;
+  grid-row: 1;
+  margin-top: 50px;
+}
+
+.removeBtn {
+  display: flex;
+  justify-content: end;
+}
+
+.addFriends {
+  padding: 20px;
+}
+
+.iconImg {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  border: 1px solid black;
+}
