--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -104,7 +104,7 @@ li {
   align-items: center;
   appearance: none;
   background-color: rgb(87, 65, 216);
-  border: 2px solid rgb(87, 65, 216);
+  border: 1px solid white;
   border-radius: 24px;
   box-shadow: rgba(0, 0, 0, 0.2) 0 3px 5px -1px,
     rgba(0, 0, 0, 0.14) 0 6px 10px 0, rgba(0, 0, 0, 0.12) 0 1px 18px 0;
